--- a/styles_domains.css
+++ b/styles_domains.css
@@ -53,12 +53,17 @@ h1{
     margin-bottom: .5rem;
 }
 
+.domain-disciplines-container{
+    background: hsl(173, 17%, 29%);
+} 
+.container-major{
+    background-image:radial-gradient( hsl(173, 17%, 29%), hsl(173, 17%, 35%));
+}   
 
 @media screen and (max-width:625px) { 
  
     /* The domain name card */
-    .domain-disciplines-container{
-        background: hsl(173, 17%, 29%);   
+    .domain-disciplines-container{        
         display: grid;
         grid-template-columns: 100vw;     
         grid-template-rows: auto;         
@@ -102,8 +107,7 @@ h1{
     
     
     /* The Major and Minor cards */
-    .container-major{
-        background-image:radial-gradient( hsl(173, 17%, 29%), hsl(173, 17%, 35%));
+    .container-major{        
         display: grid;
         grid-template-columns: 95vw;    
         grid-template-rows: auto;    
@@ -123,8 +127,7 @@ h1{
 @media screen and (min-width:625px) {  
 
     /* The domain name card */
-    .domain-disciplines-container{
-        background: hsl(173, 17%, 29%);   
+    .domain-disciplines-container{          
         display: grid;
         grid-template-columns: 33vw 33vw 33vw;     
         grid-template-rows: auto;         
@@ -166,8 +169,7 @@ h1{
     
     
     /* The Major and Minor cards */
-    .container-major{
-        background-image:radial-gradient( hsl(173, 17%, 29%), hsl(173, 17%, 35%));
+    .container-major{        
         display: grid;
         grid-template-columns: 42vw;    
         grid-template-rows: auto;    
@@ -184,8 +186,7 @@ h1{
 @media screen and (min-width:950px) {  
 
      /* The domain name card */
-.domain-disciplines-container{
-    background: hsl(173, 17%, 29%);   
+.domain-disciplines-container{      
     display: grid;
     grid-template-columns: 33vw 33vw 33vw;     
     grid-template-rows: auto;         
@@ -228,7 +229,6 @@ h1{
     
     /* The Major and Minor cards */
     .container-major{
-        background-image:radial-gradient( hsl(173, 17%, 29%), hsl(173, 17%, 35%));
         display: grid;
         grid-template-columns: 30vw;    
         grid-template-rows: auto;    
@@ -245,8 +245,7 @@ h1{
 @media screen and (min-width:1400px) {  
 
     /* The domain name card */
-.domain-disciplines-container{
-    background: hsl(173, 17%, 29%);   
+.domain-disciplines-container{     
     display: grid;
     grid-template-columns: 33vw 33vw 33vw;     
     grid-template-rows: auto;         
@@ -288,8 +287,7 @@ h1{
 
 
 /* The Major and Minor cards */
-.container-major{
-    background-image:radial-gradient( hsl(173, 17%, 29%), hsl(173, 17%, 35%));
+.container-major{    
     display: grid;
     grid-template-columns: 23vw;    
     grid-template-rows: auto;    
@@ -307,16 +305,19 @@ h1{
       color: black;
       background-color: white;      
     }
+    .domain-disciplines-container{
+        color:hsl(180, 100%, 97%);
+    }
     a {
       color: black;      
     }
     a:hover {
         color: rgb(255, 80, 255);;      
       }
-    .class-container a{
-        color: #eee;
+    .domain-disciplines-container a{
+        color:hsl(180, 100%, 97%);
     }
-    .class-container a:hover{
+    .domain-disciplines-container a:hover{
         color: rgb(0, 253, 253);
     }
     nav{
@@ -325,11 +326,11 @@ h1{
   }
   @media (prefers-color-scheme: dark) {
     body {
-      color: #eee;
+        color:hsl(180, 100%, 97%);
       background: #121212;
     }  
     a {
-      color: #eee;
+        color:hsl(180, 100%, 97%);
     }
 
   }
