--- a/styles_class.css
+++ b/styles_class.css
@@ -59,6 +59,55 @@ h1{
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+.class-image{
+    background: hsl(173, 17%, 29%);
+}
+.class-name{
+    background: hsl(173, 17%, 29%);
+}
+.class-races{
+    background: hsl(173, 17%, 29%);
+}
+.container-race-icons{
+    background: hsl(173, 17%, 29%);
+}
+.class-disciplines{
+    background: hsl(173, 17%, 29%);
+}
+.class-disciplines-text{
+    background: hsl(173, 17%, 29%);
+}
+.class-promotion{
+    background: hsl(173, 17%, 29%);
+}
+.class-promotion-text1{
+    background: hsl(173, 17%, 29%);
+}
+.class-promotion-text2{
+    background: hsl(173, 17%, 29%);
+}
+.class-promotion-text3{
+    background: hsl(173, 17%, 29%);
+}
+.class-domains{
+    background: hsl(173, 17%, 29%);
+}
+.class-domains-text1{
+    background: hsl(173, 17%, 29%);
+}
+.class-domains-text2{
+    background: hsl(173, 17%, 29%);
+}
+.class-domains-text3{
+    background: hsl(173, 17%, 29%);
+}
+.container-class-powers{
+    background-image:radial-gradient( hsl(173, 17%, 29%), hsl(173, 17%, 35%));
+}
+.container-major{
+    background-image:radial-gradient( hsl(173, 17%, 29%), hsl(173, 17%, 35%));
+}
 @media screen and (max-width:625px) { 
 
     /* The Class card */
@@ -71,17 +120,13 @@ h1{
         text-align: center;
     }
     .class-image{
-        background: rgb(128, 20, 128);
-        color: azure;
         grid-column: 1/3;
         grid-row: 1;
         display: flex;
         align-items: center;
         justify-content: center;        
     }
-    .class-name{
-        background: rgb(128, 20, 128);
-        color: azure; 
+    .class-name{ 
         grid-column: 1/3;
         grid-row: 2;
         text-align: center;
@@ -90,9 +135,7 @@ h1{
         align-items: center;
         padding: .5rem;  
     }
-    .class-races{
-        background: rgb(128, 20, 128);
-        color: azure;    
+    .class-races{   
         grid-column: 1/3;
         grid-row: 3;
         text-align: center;
@@ -101,9 +144,7 @@ h1{
         align-items: center;        
         padding: .5rem;      
     }
-    .container-race-icons{
-        background: rgb(128, 20, 128);
-        color: azure;
+    .container-race-icons{ 
         display: grid;
         grid-column: 1/3;
         grid-row: 4;
@@ -117,31 +158,23 @@ h1{
         margin: .5rem;
     }    
     
-    .class-disciplines{
-        background: rgb(128, 20, 128);
-        color: azure;    
+    .class-disciplines{    
         grid-column: 1/3;
         grid-row: 5;
         padding: .5rem;
     }
-    .class-disciplines-text{
-        background: rgb(128, 20, 128);
-        color: azure;    
+    .class-disciplines-text{   
         grid-column: 1/3;
         grid-row: 6/9;
         padding: .5rem;
         line-height: 1.5rem;  
     }
     .class-promotion{
-        background: rgb(128, 20, 128);
-        color: azure;
         grid-column: 1;
         grid-row: 10;
         padding: .5rem;     
     }
-    .class-promotion-text1{
-        background: rgb(128, 20, 128);
-        color: azure;
+    .class-promotion-text1{ 
         grid-column: 1/2;
         grid-row: 11;
         padding: .5rem;
@@ -150,9 +183,7 @@ h1{
         justify-content: center;
         list-style-type: none;
     }
-    .class-promotion-text2{
-        background: rgb(128, 20, 128);
-        color: azure;
+    .class-promotion-text2{  
         grid-column: 1/2;
         grid-row: 12;
         padding: .5rem;
@@ -161,8 +192,6 @@ h1{
         justify-content: center;
     }
     .class-promotion-text3{
-        background: rgb(128, 20, 128);
-        color: azure;
         grid-column: 1/2;
         grid-row: 13;
         padding: .5rem;
@@ -170,16 +199,12 @@ h1{
         align-items: center;
         justify-content: center;
     }
-    .class-domains{
-        background: rgb(128, 20, 128);
-        color: azure;
+    .class-domains{ 
         grid-column: 2;
         grid-row: 10;
         padding: .5rem;     
     }
-    .class-domains-text1{
-        background: rgb(128, 20, 128);
-        color: azure;
+    .class-domains-text1{ 
         grid-column: 2/3;
         grid-row: 11;
         padding: .5rem;
@@ -189,8 +214,6 @@ h1{
         line-height: 2rem; 
     }
     .class-domains-text2{
-        background: rgb(128, 20, 128);
-        color: azure;
         grid-column: 2/3;
         grid-row: 12;
         padding: .5rem;
@@ -199,9 +222,7 @@ h1{
         justify-content: center;
         line-height: 2rem; 
     }
-    .class-domains-text3{
-        background: rgb(128, 20, 128);
-        color: azure;
+    .class-domains-text3{ 
         grid-column: 2/3;
         grid-row: 13;
         padding: .5rem;
@@ -211,15 +232,7 @@ h1{
         line-height: 2rem;  
     }
 /* The class power cards*/
-.container-class-powers{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
-    display: grid;
-    grid-template-columns: 25vw;    
-    grid-template-rows: auto;    
-    text-align: center;
-    padding: .5rem;
-    margin-right: .5rem;
-}
+
 .header-class-powers img{
     width: 5rem;
 
@@ -241,8 +254,7 @@ h1{
     margin-right: 1rem;      
 }
 
-.container-class-powers{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-class-powers{    
     display: grid;
     grid-template-columns: 95vw;    
     grid-template-rows: auto;    
@@ -270,8 +282,7 @@ h1{
     margin-right: 1rem;      
 }
 /* The Major and Minor cards */
-.container-major{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-major{    
     display: grid;
     grid-template-columns: 95vw;    
     grid-template-rows: auto;    
@@ -295,18 +306,14 @@ h1{
     row-gap: .2rem;
     text-align: center;
 }
-.class-image{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-image{  
     grid-column: 1;
     grid-row: 1/4;
     display: flex;
     align-items: center;
     justify-content: center;        
 }
-.class-name{
-    background: rgb(128, 20, 128);
-    color: azure; 
+.class-name{   
     grid-column: 2/4;
     grid-row: 1;
     display: flex;
@@ -314,9 +321,7 @@ h1{
     align-items: center;
     padding: .5rem;  
 }
-.class-races{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-races{   
     grid-column: 2/4;
     grid-row: 2;
     text-align: center;
@@ -326,8 +331,6 @@ h1{
     padding: .5rem;      
 }
 .container-race-icons{
-    background: rgb(128, 20, 128);
-    color: azure;
     display: grid;
     grid-column: 2/4;
     grid-row: 3;
@@ -340,31 +343,23 @@ h1{
 .container-race-icons img{    
     padding: .5rem;
 }
-.class-disciplines{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-disciplines{     
     grid-column: 1/2;
     grid-row: 4;
     padding: .5rem;
 }
-.class-disciplines-text{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-disciplines-text{   
     grid-column: 1/2;
     grid-row: 5/8;
     padding: .5rem;
     line-height: 1.5rem; 
 }
-.class-promotion{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-promotion{ 
     grid-column: 2/3;
     grid-row: 4;
     padding: .5rem;     
 }
 .class-promotion-text1{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 2/3;
     grid-row: 5;
     padding: .5rem;
@@ -372,9 +367,7 @@ h1{
     align-items: center;
     justify-content: center;
 }
-.class-promotion-text2{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-promotion-text2{ 
     grid-column: 2/3;
     grid-row: 6;
     padding: .5rem;
@@ -382,9 +375,7 @@ h1{
     align-items: center;
     justify-content: center;
 }
-.class-promotion-text3{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-promotion-text3{  
     grid-column: 2/3;
     grid-row: 7;
     padding: .5rem;
@@ -393,15 +384,11 @@ h1{
     justify-content: center;
 }
 .class-domains{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 4;
     padding: .5rem;     
 }
 .class-domains-text1{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 5;
     padding: .5rem;    
@@ -411,8 +398,6 @@ h1{
     line-height: 2rem;
 }
 .class-domains-text2{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 6;
     padding: .5rem;
@@ -422,8 +407,6 @@ h1{
     line-height: 2rem;
 }
 .class-domains-text3{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 7;
     padding: .5rem;
@@ -433,8 +416,7 @@ h1{
     line-height: 2rem; 
 }
 /* The class power cards*/
-.container-class-powers{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-class-powers{    
     display: grid;
     grid-template-columns: 42vw;    
     grid-template-rows: auto;    
@@ -464,8 +446,7 @@ h1{
     margin-right: 1rem;      
 }
 /* The Major and Minor cards */
-.container-major{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-major{    
     display: grid;
     grid-template-columns: 42vw;    
     grid-template-rows: auto;    
@@ -489,18 +470,14 @@ h1{
     row-gap: .2rem;
     text-align: center;
 }
-.class-image{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-image{  
     grid-column: 1;
     grid-row: 1/4;
     display: flex;
     align-items: center;
     justify-content: center;        
 }
-.class-name{
-    background: rgb(128, 20, 128);
-    color: azure; 
+.class-name{ 
     grid-column: 2/4;
     grid-row: 1;
     display: flex;
@@ -508,9 +485,7 @@ h1{
     align-items: center;
     padding: .5rem;  
 }
-.class-races{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-races{   
     grid-column: 2/4;
     grid-row: 2;
     text-align: center;
@@ -519,9 +494,7 @@ h1{
     align-items: center;
     padding: .5rem;      
 }
-.container-race-icons{
-    background: rgb(128, 20, 128);
-    color: azure;
+.container-race-icons{ 
     display: grid;
     grid-column: 2/4;
     grid-row: 3;
@@ -534,31 +507,23 @@ h1{
 .container-race-icons img{    
     padding: .5rem;
 }
-.class-disciplines{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-disciplines{     
     grid-column: 1/2;
     grid-row: 4;
     padding: .5rem;
 }
-.class-disciplines-text{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-disciplines-text{      
     grid-column: 1/2;
     grid-row: 5/8;
     padding: .5rem;
     line-height: 1.5rem; 
 }
 .class-promotion{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 2/3;
     grid-row: 4;
     padding: .5rem;     
 }
 .class-promotion-text1{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 2/3;
     grid-row: 5;
     padding: .5rem;
@@ -567,8 +532,6 @@ h1{
     justify-content: center;
 }
 .class-promotion-text2{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 2/3;
     grid-row: 6;
     padding: .5rem;
@@ -577,8 +540,6 @@ h1{
     justify-content: center;
 }
 .class-promotion-text3{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 2/3;
     grid-row: 7;
     padding: .5rem;
@@ -586,16 +547,12 @@ h1{
     align-items: center;
     justify-content: center;
 }
-.class-domains{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-domains{ 
     grid-column: 3/4;
     grid-row: 4;
     padding: .5rem;     
 }
 .class-domains-text1{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 5;
     padding: .5rem;    
@@ -605,8 +562,6 @@ h1{
     line-height: 2rem;
 }
 .class-domains-text2{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 6;
     padding: .5rem;
@@ -616,8 +571,6 @@ h1{
     line-height: 2rem;
 }
 .class-domains-text3{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 7;
     padding: .5rem;
@@ -627,8 +580,7 @@ h1{
     line-height: 2rem; 
 }
 /* The class power cards*/
-.container-class-powers{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-class-powers{    
     display: grid;
     grid-template-columns: 30vw;    
     grid-template-rows: auto;    
@@ -659,8 +611,7 @@ h1{
     margin-right: 1rem;      
 }
 /* The Major and Minor cards */
-.container-major{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-major{    
     display: grid;
     grid-template-columns: 30vw;    
     grid-template-rows: auto;    
@@ -686,9 +637,7 @@ h1{
     row-gap: .2rem;
     text-align: center;   
 }
-.class-image{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-image{ 
     grid-column: 1;
     grid-row: 1/4;
     display: flex;
@@ -696,8 +645,6 @@ h1{
     justify-content: center;        
 }
 .class-name{
-    background: rgb(128, 20, 128);
-    color: azure; 
     grid-column: 2/4;
     grid-row: 1;
     display: flex;
@@ -705,9 +652,7 @@ h1{
     align-items: center;
     padding: .5rem;  
 }
-.class-races{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-races{  
     grid-column: 2/4;
     grid-row: 2;
     text-align: center;
@@ -717,8 +662,6 @@ h1{
     padding: .5rem;      
 }
 .container-race-icons{
-    background: rgb(128, 20, 128);
-    color: azure;
     display: grid;
     grid-column: 2/4;
     grid-row: 3;
@@ -731,31 +674,23 @@ h1{
 .container-race-icons img{    
     padding: .5rem;
 }
-.class-disciplines{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-disciplines{   
     grid-column: 1/2;
     grid-row: 4;
     padding: .5rem;
 }
-.class-disciplines-text{
-    background: rgb(128, 20, 128);
-    color: azure;    
+.class-disciplines-text{     
     grid-column: 1/2;
     grid-row: 5/8;
     padding: .5rem;
     line-height: 1.5rem; 
 }
 .class-promotion{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 2/3;
     grid-row: 4;
     padding: .5rem;     
 }
-.class-promotion-text1{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-promotion-text1{ 
     grid-column: 2/3;
     grid-row: 5;
     padding: .5rem;
@@ -764,8 +699,6 @@ h1{
     justify-content: center;
 }
 .class-promotion-text2{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 2/3;
     grid-row: 6;
     padding: .5rem;
@@ -773,9 +706,7 @@ h1{
     align-items: center;
     justify-content: center;
 }
-.class-promotion-text3{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-promotion-text3{  
     grid-column: 2/3;
     grid-row: 7;
     padding: .5rem;
@@ -783,16 +714,12 @@ h1{
     align-items: center;
     justify-content: center;
 }
-.class-domains{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-domains{   
     grid-column: 3/4;
     grid-row: 4;
     padding: .5rem;     
 }
 .class-domains-text1{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 5;
     padding: .5rem;    
@@ -802,8 +729,6 @@ h1{
     line-height: 2rem;
 }
 .class-domains-text2{
-    background: rgb(128, 20, 128);
-    color: azure;
     grid-column: 3/4;
     grid-row: 6;
     padding: .5rem;
@@ -812,9 +737,7 @@ h1{
     justify-content: center;
     line-height: 2rem;
 }
-.class-domains-text3{
-    background: rgb(128, 20, 128);
-    color: azure;
+.class-domains-text3{ 
     grid-column: 3/4;
     grid-row: 7;
     padding: .5rem;
@@ -824,8 +747,7 @@ h1{
     line-height: 2rem; 
 }
 /* The class power cards*/
-.container-class-powers{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-class-powers{    
     display: grid;
     grid-template-columns: 23vw;    
     grid-template-rows: auto;    
@@ -848,8 +770,7 @@ h1{
     margin-top: .5rem;         
 }
 /* The Major and Minor cards */
-.container-major{
-    background-image:radial-gradient(rgb(100, 33, 100), rgb(128, 20, 128));
+.container-major{    
     display: grid;
     grid-template-columns: 23vw;    
     grid-template-rows: auto;    
@@ -867,6 +788,9 @@ h1{
       color: black;
       background-color: white;      
     }
+    .class-container{
+        color:hsl(180, 100%, 97%);
+    }
     a {
       color: black;      
     }
@@ -874,7 +798,7 @@ h1{
         color: rgb(255, 80, 255);;      
       }
     .class-container a{
-        color: #eee;
+        color:hsl(180, 100%, 97%);
     }
     .class-container a:hover{
         color: rgb(0, 253, 253);
@@ -887,11 +811,12 @@ h1{
   }
   @media (prefers-color-scheme: dark) {
     body {
-      color: #eee;
-      background: #121212;
+        color:hsl(180, 100%, 97%);
+        background: #121212;
     }  
     a {
-      color: #eee;
+        color:hsl(180, 100%, 97%);
     }
 
   }
+  
