--- a/styles_race.css
+++ b/styles_race.css
@@ -10,7 +10,7 @@ section{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    color: azure;
+    color:hsl(180, 100%, 97%);
 }
 ul{    
     list-style-type: none;
@@ -23,15 +23,18 @@ nav li{
 }
 a{
     text-decoration: none;
-    color: azure;    
+    color:hsl(180, 100%, 97%);    
 }
 a:hover{
     text-decoration: none;
     color: rgb(0, 253, 253);    
 }
+.race-container a:hover{
+    font-size: 99%;               
+}
 body{
     text-align: center;
-    color: azure;
+    color:hsl(180, 100%, 97%);
     margin: 0;    
 }
 .container-major h2{
@@ -67,7 +70,7 @@ h1{
 }
 .race-name{
     background: hsl(173, 17%, 29%);
-    color: azure;
+    color:hsl(180, 100%, 97%);
 }
 .race-classes{
     background: hsl(173, 17%, 29%);
@@ -592,7 +595,7 @@ h1{
         color:hsl(180, 100%, 97%);
     }
     .race-container a:hover{
-        color: rgb(0, 253, 253);
+        color: rgb(0, 253, 253);        
     }
     nav{
         color: black;
